; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_misc.c_get_track_seek_offset.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_misc.c_get_track_seek_offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MPContext = type { %struct.MPOpts* }
%struct.MPOpts = type { double, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { double }
%struct.track = type { i64, i64 }

@STREAM_AUDIO = common dso_local global i64 0, align 8
@STREAM_SUB = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double @get_track_seek_offset(%struct.MPContext* %0, %struct.track* %1) #0 {
  %3 = alloca double, align 8
  %4 = alloca %struct.MPContext*, align 8
  %5 = alloca %struct.track*, align 8
  %6 = alloca %struct.MPOpts*, align 8
  store %struct.MPContext* %0, %struct.MPContext** %4, align 8
  store %struct.track* %1, %struct.track** %5, align 8
  %7 = load %struct.MPContext*, %struct.MPContext** %4, align 8
  %8 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %7, i32 0, i32 0
  %9 = load %struct.MPOpts*, %struct.MPOpts** %8, align 8
  store %struct.MPOpts* %9, %struct.MPOpts** %6, align 8
  %10 = load %struct.track*, %struct.track** %5, align 8
  %11 = getelementptr inbounds %struct.track, %struct.track* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %39

14:                                               ; preds = %2
  %15 = load %struct.track*, %struct.track** %5, align 8
  %16 = getelementptr inbounds %struct.track, %struct.track* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @STREAM_AUDIO, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %25

20:                                               ; preds = %14
  %21 = load %struct.MPOpts*, %struct.MPOpts** %6, align 8
  %22 = getelementptr inbounds %struct.MPOpts, %struct.MPOpts* %21, i32 0, i32 0
  %23 = load double, double* %22, align 8
  %24 = fneg double %23
  store double %24, double* %3, align 8
  br label %40

25:                                               ; preds = %14
  %26 = load %struct.track*, %struct.track** %5, align 8
  %27 = getelementptr inbounds %struct.track, %struct.track* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = load i64, i64* @STREAM_SUB, align 8
  %30 = icmp eq i64 %28, %29
  br i1 %30, label %31, label %38

31:                                               ; preds = %25
  %32 = load %struct.MPOpts*, %struct.MPOpts** %6, align 8
  %33 = getelementptr inbounds %struct.MPOpts, %struct.MPOpts* %32, i32 0, i32 1
  %34 = load %struct.TYPE_2__*, %struct.TYPE_2__** %33, align 8
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i32 0, i32 0
  %36 = load double, double* %35, align 8
  %37 = fneg double %36
  store double %37, double* %3, align 8
  br label %40

38:                                               ; preds = %25
  br label %39

39:                                               ; preds = %38, %2
  store double 0.000000e+00, double* %3, align 8
  br label %40

40:                                               ; preds = %39, %31, %20
  %41 = load double, double* %3, align 8
  ret double %41
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
